# smartdiff

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml
src/: file_system.rs  main.rs  room.rs  smart_xml.rs
