[package]
name = "smartdiff"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version= "0.13.1", features = ["image", "canvas"] }
iced_aw = { version = "0.12.0", default-features = false, features = ["selection_list"] }
clap = { version = "4.5.39", features = ["derive"] }
git2 = "0.20.2"
anyhow = "1.0.98"
glob = "0.3.2"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.6.0"
dark-light = "2.0.0"
hashbrown = "0.15.4"
